--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "drizzle-orm": "^0.44.6",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
+    "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.37.0",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "drizzle-kit": "^0.31.5",
     "eslint": "^9",
     "eslint-config-next": "^15.5.4",
@@ -36,6 +37,7 @@
     "eslint-plugin-tailwindcss": "^3.18.2",
     "globals": "^16.4.0",
     "pg": "^8.16.3",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "tsx": "^4.20.6",
     "typescript": "^5",
