--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
+    "@elevenlabs/client": "^0.7.1",
     "@elevenlabs/elevenlabs-js": "^2.17.0",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
